fix: minor excel removal

--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -75,6 +75,10 @@
 		<script src="js/spin.js"></script>
 		<link href="css/spin.css" rel="stylesheet"> </link>
 
+		<!-- alert library -->
+		<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+		<!-- <link rel="stylesheet" href="https://unpkg.com/sweetalert/dist/sweetalert.css"> -->
+
 		<style>
 			@import url("css/inter.css");
 			
