오류코드, 주석

--- a/src/main/resources/templates/views/biz/fst/BIZFST001M0.html
+++ b/src/main/resources/templates/views/biz/fst/BIZFST001M0.html
@@ -280,7 +280,7 @@
 						alert("Successfully Settled");
 						main();
 						} else {
-							alert( "Save Fail Error : " + result.data.resultMessage );
+							alert( "Save Fail Error : " + resultData.resultMessage );
 						}
 					break;
 				}
