--- a/src/main/resources/templates/views/biz/jnl/BIZJNL002M0.html
+++ b/src/main/resources/templates/views/biz/jnl/BIZJNL002M0.html
@@ -276,7 +276,7 @@
 						alert("Successfully Insert");
 						main();
 						} else {
-							alert( "Save Fail Error : " + result.data.resultMessage );
+							alert( "Save Fail Error : " + resultData.resultMessage );
 						}
 						break;
 					case "updateList" :
@@ -284,7 +284,7 @@
 						alert("Successfully Updated");
 						main();
 						} else {
-							alert( "Save Fail Error : " + result.data.resultMessage );
+							alert( "Save Fail Error : " + resultData.resultMessage );
 						}
 						break;
 					case "deleteList" :
@@ -292,7 +292,7 @@
 						alert("Successfully Deleted");
 						main();
 						} else {
-							alert( "Save Fail Error : " + result.data.resultMessage );
+							alert( "Save Fail Error : " + resultData.resultMessage );
 						}
 						break;
 				}
