--- a/src/main/resources/templates/views/biz/adt/BIZADT001M0.html
+++ b/src/main/resources/templates/views/biz/adt/BIZADT001M0.html
@@ -278,7 +278,7 @@
 							console.log("executeList case");
 							main();
 						} else {
-							alert( "Save Fail Error : " + result.data.resultMessage );
+							alert( "Save Fail Error : " + resultData.resultMessage );
 						}
 					break;
 				 }	  
