--- a/src/main/resources/templates/views/biz/ins/BIZINS002M0.html
+++ b/src/main/resources/templates/views/biz/ins/BIZINS002M0.html
@@ -275,7 +275,7 @@
 								alert("Successfully Calculated!");
 								main();
 							} else {
-								alert( "Save Fail Error : " + result.data.resultMessage );
+								alert( "Save Fail Error : " + resultData.resultMessage );
 							}
 							
 						break;
