--- a/src/main/resources/templates/views/biz/ins/BIZINS003M0.html
+++ b/src/main/resources/templates/views/biz/ins/BIZINS003M0.html
@@ -276,7 +276,7 @@
 							alert("Successfully Calculated!");
 							main();
 						} else {
-							alert( "Save Fail Error : " + result.data.resultMessage );
+							alert( "Save Fail Error : " + resultData.resultMessage );
 						}
 						
 					break;
