--- a/src/main/resources/templates/views/biz/jnl/BIZJNL001M0.html
+++ b/src/main/resources/templates/views/biz/jnl/BIZJNL001M0.html
@@ -249,7 +249,7 @@
 							alert("Successfully Insert");
 							main();
 						} else {
-							alert( "Save Fail Error : " + result.data.resultMessage );
+							alert( "Save Fail Error : " + resultData.resultMessage );
 						}
 						break;
 					case "updateList" :
@@ -258,7 +258,7 @@
 							alert("Successfully Updated");
 							main();
 						} else {
-							alert( "Save Fail Error : " + result.data.resultMessage );
+							alert( "Save Fail Error : " + resultData.resultMessage );
 						}
 						break;
 					case "deleteList" :
@@ -267,7 +267,7 @@
 							alert("Successfully Deleted");
 							main();
 						} else {
-							alert( "Save Fail Error : " + result.data.resultMessage );
+							alert( "Save Fail Error : " + resultData.resultMessage );
 						}
 						break;
 				}
