--- a/src/main/resources/templates/views/wrk/fil/WRKFIL002M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL002M0.html
@@ -304,31 +304,41 @@
 		function fn_callback(result) {
 			//console.log("fn_callback : " + result.id);
 			if (result.resultCd == "S") {
+				let resultData = typeof result.data === "string" ? JSON.parse(result.data) : result.data;
 				switch (result.id) {
 					case "SelectFileList":
 						console.log("selectFileList");
-						populateDropdown(result.data);
+						populateDropdown(resultData);
 						break;
 					case "SelectList":
 						
-						fn_setGrid(result.data);
+						fn_setGrid(resultData);
 						break;
 					case "insertList":
-						
+						if ( resultData.resultCode == "200" ) {
 						alert("Successfully Insert");
 						main();
+						} else {
+							alert( "Save Fail Error : " + resultData.resultMessage );
+						}
 						break;
 						
 					case "updateList":
-						
+						if ( resultData.resultCode == "200" ) {
 						alert("Successfully Updated");
 						main();
+						} else {
+							alert( "Save Fail Error : " + resultData.resultMessage );
+						}
 						break;
 						
 					case "deleteList":
-						
+						if ( resultData.resultCode == "200" ) {
 						alert("Successfully Deleted");
 						main();
+						} else {
+							alert( "Save Fail Error : " + resultData.resultMessage );
+						}
 						break;
 				}
 			} else if (result.resultCd == "E") {
