--- a/src/main/resources/templates/views/user/passwordReset.html
+++ b/src/main/resources/templates/views/user/passwordReset.html
@@ -7,6 +7,7 @@
 		<meta name="_csrf_parameter" th:content="${csrfParameterName}">
 		<meta name="_csrf_header" th:content="${csrfHeaderName}">
 		<title>iFrame 2.0 - Cloud IFRS17 Closing Services</title>
+		<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 		<!-- CSS file -->
 		<link href="css/css-tabler/tabler.min.css?1692870487" rel="stylesheet"/>
 		<!-- Javascript file -->
@@ -82,35 +83,34 @@
     	var vUsrId      = $("#userId").val();
     	var vUsrPhNo    = $("#userPhone").val();
     	var csrfToken     = $("meta[name='_csrf_token']").attr("content");
-    	var csrfHeader    = $("meta[name='_csrf_header']").attr("content");
-    	
+    	var csrfHeader    = $("meta[name='_csrf_header']").attr("content");alert
     	if ( isNull(vCompNoDvCd) == "" ) {
             alert("Select type of your company identification.");
-            $("#companyDivision").focus();
+           $("#companyDivision").focus();
     		return;
     	}
     	
     	if ( isNull(vCompNo) == "" ) {
-            alert("Enter your company number.");
-            $("#companyNo").focus();
+    		alert("Enter your company number.");
+           $("#companyNo").focus();
     		return;
     	}
     	
     	if ( isNull(vUsrId) == "" ) {
-            alert("Enter your e-mail (ID).");
+    		alert("Enter your e-mail (ID).");
             $("#userId").focus();
     		return;
     	}
 
         // 이메일 형식이 올바르지 않은 경우
         if (!validateEmail(vUsrId)) {
-            alert("Incorrect e-mail address. Please enter it again."); // 오류 메시지 표시
+        	alert("Incorrect e-mail address. Please enter it again."); // 오류 메시지 표시
             $("#userId").focus();
             return;
         }
 
     	if ( isNull(vUsrPhNo) == "" ) {
-            alert("Enter your phone number.");
+    		alert("Enter your phone number.");
             $("#userPhone").focus();
     		return;
     	}
