--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -3,14 +3,14 @@
 	<footer class="navbar navbar-expand-md d-none d-lg-flex d-print-none sticky-bottom">
 		<div class="container-xl">
 			<div class="navbar-nav align-items-center flex-row order-md-last">
-						<span style="font-size: 0.8em;"><a href="https://www.rnadatasystem.com" class="link-dark" target="_blank" rel="noopener" style="text-decoration: none;">Homepage</a></span>
-						<span style="padding-left:30px; font-size: 0.8em;"><a href="#" id="termsOfService" class="link-dark privacy-policy-link">Terms of Service</a></span>
-						<span style="padding-left:30px; font-size: 0.8em;"><a href="#" id="privacyPolicy" class="link-dark privacy-policy-link">Privacy Policy</a></span>
-						<span style="padding-left:30px; font-size: 0.8em;"><a href="./SaaSCertification.html" class="link-dark" style="text-decoration: none;">SaaS Certification</a></span>
+						<span style="font-size: 0.8em;"><a href="https://www.rnadatasystem.com" class="link-dark" target="_blank" rel="noopener" style="text-decoration: none;">RNA Data System</a></span>
+						<span style="padding-left:30px; font-size: 0.8em;"><a href="#" id="termsOfService" class="link-dark" style="text-decoration: none;">Terms of Service</a></span>
+						<span style="padding-left:30px; font-size: 0.8em;"><a href="#" id="privacyPolicy" class="link-dark" style="text-decoration: none;">Privacy Policy</a></span>
+						<span style="padding-left:30px; font-size: 0.8em;"><a href="./SaaSCertification.html" class="link-dark" target="_blank" rel="noopener" style="text-decoration: none;">SaaS Certification</a></span>
 			</div>
 			<div class="collapse navbar-collapse" id="navbar-menu">
 						<span style="padding-right:30px; font-size: 0.8em;">Copyright © 2024 RNA Data System. All Rights Reserved.</span>
-						<span style="font-size: 0.8em;">v0.9.3 (2024.10.25)</span>
+						<span style="font-size: 0.8em;">v0.9.6 (2024.10.31)</span>
 			</div>
 			<div class="popupDataForm">
 				<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#footerModal" style="display: none">Launch modal with form</button>
