--- a/src/main/resources/templates/views/adm/srv/ADMSRV002M0.html
+++ b/src/main/resources/templates/views/adm/srv/ADMSRV002M0.html
@@ -59,6 +59,8 @@
 								<span id="">Currently subscribing to :</span>
 								<br><br>
 								<span id="serviceChange" class="text-primary fs-2"></span>
+						        <div class = "form-group"></div>
+								<span id="selectedOption" class="text-secondary fs-3"></span>
 							</div>
 						</a>
 					</div>
@@ -91,17 +93,63 @@
                				<div class="ribbon ribbon-top bg-secondary">
                  				<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-list-details"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M13 5h8" /><path d="M13 9h5" /><path d="M13 15h8" /><path d="M13 19h5" /><path d="M3 4m0 1a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v4a1 1 0 0 1 -1 1h-4a1 1 0 0 1 -1 -1z" /><path d="M3 14m0 1a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v4a1 1 0 0 1 -1 1h-4a1 1 0 0 1 -1 -1z" /></svg>
 							</div>
-							<div class="card-body text-center flex-grow-1">
-                   				<span id="">This additional option is in use :</span>
-								<br><br>
-								<span id="selectedOption" class="text-secondary fs-2"></span>
+							<div class="card-body text-start flex-grow-1">
+								<span id="">File Upload  & Job Running: </span>
+							 	<br><br>
+								<div class="d-flex justify-content-between mb-2" > <!-- Added flex container -->
+									<span class="text-secondary fs-3" id="premiumSrvc">File Size:</span>
+									<span class="text-secondary fs-3" style="font-weight: bold; ;">+ 3,232 USD</span> <!-- Moved price here -->
+								</div>
+							 	<div class = "form-group"></div>
+								<div class="d-flex justify-content-between pt-0"> <!-- Added flex container -->
+									<span class="text-secondary fs-3" id="premiumSrvcUser">Job Running:</span>
+									<span class="text-secondary fs-3" style="font-weight: bold; ;">+ 5,887 USD</span> <!-- Moved price here -->
+								</div>
 							</div>
 						</a>
 					</div>
-					<div class="col-12 mb-3">
-						<div class="card card-md">
+					 <div class="mb-2">
+						<!-- <div class="card card-md">
 							<div class="container my-5">
 								<canvas id="mixedChart" width="300" height="100"></canvas>
+							</div>
+						</div> -->
+					</div>
+					<div class="col-12 mb-3">
+						<div class="card">
+							<div class="card-header">
+								<ul class="nav nav-tabs card-header-tabs" data-bs-toggle="tabs">
+									<li class="nav-item">
+										<a href="#tabs-profile" class="nav-link active" data-bs-toggle="tab">
+										<span class="text-secondary">
+											<svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-businessplan"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M16 6m-5 0a5 3 0 1 0 10 0a5 3 0 1 0 -10 0" /><path d="M11 6v4c0 1.657 2.239 3 5 3s5 -1.343 5 -3v-4" /><path d="M11 10v4c0 1.657 2.239 3 5 3s5 -1.343 5 -3v-4" /><path d="M11 14v4c0 1.657 2.239 3 5 3s5 -1.343 5 -3v-4" /><path d="M7 9h-2.5a1.5 1.5 0 0 0 0 3h1a1.5 1.5 0 0 1 0 3h-2.5" /><path d="M5 15v1m0 -8v1" /></svg>
+												Usage Information
+										</span>
+										</a>
+									</li>
+									<li class="nav-item">
+										<a href="#tabs-password" class="nav-link" data-bs-toggle="tab">
+										<span class="text-secondary">
+											<svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-server-cog"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 4m0 3a3 3 0 0 1 3 -3h12a3 3 0 0 1 3 3v2a3 3 0 0 1 -3 3h-12a3 3 0 0 1 -3 -3z" /><path d="M12 20h-6a3 3 0 0 1 -3 -3v-2a3 3 0 0 1 3 -3h10.5" /><path d="M18 18m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" /><path d="M18 14.5v1.5" /><path d="M18 20v1.5" /><path d="M21.032 16.25l-1.299 .75" /><path d="M16.27 19l-1.3 .75" /><path d="M14.97 16.25l1.3 .75" /><path d="M19.733 19l1.3 .75" /><path d="M7 8v.01" /><path d="M7 16v.01" /></svg>
+												Service History
+										</span>
+										</a>
+									</li>
+								</ul>
+							</div>
+							<div class="card-body">
+								<div class="tab-content">
+									<div class="tab-pane active show" id="tabs-profile">
+										<div class="container my-5">
+											<canvas id="mixedChart" width="300" height="100"></canvas>
+										</div>
+									</div>
+									<div class="tab-pane" id="tabs-password">
+										<div class="container my-5">
+											<canvas id="serviceHist" width="300" height="100"></canvas>
+										</div>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -111,12 +159,14 @@
 	</div>
 	<script>
 	    let initlaizedChart;
+		let serviceHistChart;
 	    //  we have to wait for the DOM to load
 	    document.addEventListener("DOMContentLoaded", function () {
 	      const ctx = document.getElementById("mixedChart").getContext("2d");
+		  const ctx2 = document.getElementById("serviceHist").getContext("2d");
 	
 	      // const mixedChart = new Chart(ctx, config);
-	      initlaizedChart = new Chart(ctx, {
+	      initlaizedChart = new Chart(ctx,{
 	        data: {
 	          labels: [],
 	          datasets: [],
@@ -131,7 +181,7 @@
 	          plugins: {
 	            title: {
 	              display: true,
-	              text: "Usage Chart",
+	              text: "Usage Information",
 	              font: {
 	                size: 18,
 	                textAlign: "flex-start",
@@ -188,6 +238,61 @@
 	          },
 	        },
 	      });
+
+		  serviceHistChart = new Chart(ctx2,{
+	        data: {
+	          labels: [],
+	          datasets: [],
+	        },
+	        options: {
+	          responsive: true,
+	          interaction: {
+	            mode: "index",
+	            intersect: false,
+	          },
+	          stacked: false,
+	          plugins: {
+	            title: {
+	              display: true,
+	              text: "Service History",
+	              font: {
+	                size: 18,
+	                textAlign: "flex-start",
+	              },
+	            },
+	            tooltip: {
+	              enabled: true,
+	              mode: "index",
+	              intersect: false,
+	            },
+	            legend: {
+	              position: "top",
+	            },
+	          },
+	          scales: {
+	            // Primary y-axis for Sales (Bar Charts)
+	            y: {
+	              type: "linear",
+	              display: true,
+	              position: "left",
+	              title: {
+	                display: true,
+	                text: "Service",
+	                font: {
+	                  size: 14,
+	                },
+	                // align: "start", // we align the title to the start of the axis
+	              },
+	              ticks: {
+	                beginAtZero: true,
+	                min: 0,
+	                max: 150,
+	              },
+	            }
+	          },
+	        },
+	      });
+
 	
 	      // Function to update the chart with new data
 	      function updateChart(data) {
@@ -224,14 +329,17 @@
 	          (item) => item.srvcCostExpSum || null
 	        );
 
+			const randomData = Array.from({ length: 30 }, () => Math.floor(Math.random() * 100));
+
 	        // Update the chart data
 	        initlaizedChart.data.labels = labels;
+			serviceHistChart.data.labels = labels;
 	        initlaizedChart.data.datasets = [
 	          {
 	            type: "bar",
-	            label: "Basic Service",
-	            data: bsrvcVal,
-	            backgroundColor: "rgba(255, 99, 132, 0.2)",
+	            label: "Upload File Size",
+	            data: randomData,
+	            backgroundColor: "rgba(254, 183, 255, 0.8)",
 	            borderColor: "rgba(255, 99, 132, 1)",
 	            yAxisID: "y",
 	            orderWidth: 1,
@@ -240,9 +348,9 @@
 	          },
 	          {
 	            type: "bar",
-	            label: "Premium Service",
-	            data: psrvcVal,
-	            backgroundColor: "rgba(54, 162, 235, 0.2)",
+	            label: "Job Running Time",
+	            data: randomData,
+	            backgroundColor: "rgba(144, 247, 146, 0.8)",
 	            borderColor: "rgba(54, 162, 235, 1)",
 	            yAxisID: "y",
 	            orderWidth: 1,
@@ -270,9 +378,35 @@
 	            spanGaps: true,
 	          },
 	        ];
+			serviceHistChart.data.datasets = [
+	          {
+	            type: "bar",
+	            label: "Basic Service",
+				data: bsrvcVal,
+				backgroundColor: "rgba(255, 99, 132, 0.2)",
+				borderColor: "rgba(255, 99, 132, 1)",
+				yAxisID: "y",
+				orderWidth: 1,
+				barThickness: "flex",
+				maxBarThickness: 50,
+	          },
+	          {
+	            type: "bar",
+	            label: "Premium Service",
+				data: psrvcVal,
+				backgroundColor: "rgba(54, 162, 235, 0.2)",
+				borderColor: "rgba(54, 162, 235, 1)",
+				yAxisID: "y",
+				orderWidth: 1,
+				barThickness: "flex",
+				maxBarThickness: 50,
+	          }
+			];
+	        
 	
 	        // Update the chart
 	        initlaizedChart.update();
+			serviceHistChart.update();
 	      }
 	
 	      function getCurrMonthAndYear() {
