--- a/src/main/resources/templates/views/wrk/fil/WRKFIL001M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL001M0.html
@@ -166,7 +166,7 @@
 		var dataView;
 		var data;
 		var unqId = "seqNo";
-		var xcpt_cols = [unqId, "usrNm", "frstRegDtm"];
+		var xcpt_cols = [unqId, "frstRegEmpNo", "frstRegDtm"];
 		var check_cols = ["seqNo", "fileNm", "dbId", "tblId", "fileDsc", "fileDelYn", "uiSelYn", "useYn", "vrfUseYn"];
 		var columns = [
 			{ id: "seqNo",			name: "Seq",				field: "seqNo",			width: 40,					editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" },
@@ -178,7 +178,7 @@
 			{ id: "uiSelYn",		name: "UI View YN",			field: "uiSelYn",		width: 100,	sortable: true, editor: function (args) { return new ComboBoxEditor(args, [{ key: "Y", value: "Y" }, { key: "N", value: "N" }]);}, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" },
 			{ id: "useYn",			name: "Use YN",				field: "useYn",			width: 80,	sortable: true, editor: function (args) { return new ComboBoxEditor(args, [{ key: "Y", value: "Y" }, { key: "N", value: "N" }]);}, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" },
 			{ id: "vrfUseYn",		name: "Validation YN",		field: "vrfUseYn",		width: 110,	sortable: true, editor: function (args) { return new ComboBoxEditor(args, [{ key: "Y", value: "Y" }, { key: "N", value: "N" }]);}, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" },
-			{ id: "usrNm",			name: "Registrant",			field: "usrNm",			width: 120,	sortable: true, editor: Slick.Editors.Text, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" },
+			{ id: "frstRegEmpNo",	name: "Registrant",			field: "frstRegEmpNo",	width: 120,	sortable: true, editor: Slick.Editors.Text, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" },
 			{ id: "frstRegDtm",		name: "Registration Date",	field: "frstRegDtm",	width: 120,	sortable: true, editor: Slick.Editors.Text, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" },
 		];
 
@@ -378,9 +378,9 @@
 			let hiddenColumns;
 			
 			if (modalType === "create") {
-				hiddenColumns = [unqId, "usrNm", "frstRegDtm"];
+				hiddenColumns = [unqId, "frstRegEmpNo", "frstRegDtm"];
 			} else {
-				hiddenColumns = ["usrNm", "frstRegDtm"];  // 컬럼 숨기기
+				hiddenColumns = ["frstRegEmpNo", "frstRegDtm"];  // 컬럼 숨기기
 			}
 			
 			let selYn = [
