feat: added the loading animation to wrkbat002 page

--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -67,6 +67,9 @@
 		<script src="js/libs-tabler/nouislider/dist/nouislider.min.js?1692870487" defer></script>
 		<script src="js/libs-tabler/litepicker/dist/litepicker.js?1692870487" defer></script>
 		<script src="js/libs-tabler/tom-select/dist/js/tom-select.base.min.js?1692870487" defer></script>
+		
+		<!--importing a loading animation util script -->
+		<script src="js/spinnerUtil.js"></script>
 
 		<!-- chartjs library for making a charts --> 
 		<script src="js/chart.js"></script>
