--- a/src/main/resources/templates/views/adm/srv/ADMSRV002M0.html
+++ b/src/main/resources/templates/views/adm/srv/ADMSRV002M0.html
@@ -51,69 +51,52 @@
 				</div>
 				<div class="row row-cards">
 					<div class="col-sm-6 col-xl-3">
-						<a class="card card-link card-link-pop card-md d-flex flex-column h-100">
+						<a class="card card-link card-link-pop d-flex flex-column">
                				<div class="ribbon ribbon-top bg-primary">
 								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-device-imac-cog"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 17h-8a1 1 0 0 1 -1 -1v-12a1 1 0 0 1 1 -1h16a1 1 0 0 1 1 1v8" /><path d="M3 13h13" /><path d="M8 21h4" /><path d="M10 17l-.5 4" /><path d="M19.001 19m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" /><path d="M19.001 15.5v1.5" /><path d="M19.001 21v1.5" /><path d="M22.032 17.25l-1.299 .75" /><path d="M17.27 20l-1.3 .75" /><path d="M15.97 17.25l1.3 .75" /><path d="M20.733 20l1.3 .75" /></svg>
 							</div>
-							<div class="card-body text-center flex-grow-1">
-								<span id="">Currently subscribing to :</span>
-								<br><br>
-								<span id="serviceChange" class="text-primary fs-2"></span>
-						        <div class = "form-group"></div>
-								<span id="selectedOption" class="text-secondary fs-3"></span>
+							<div class="text-center">
+								<p class="text-black fs-4 fw-bold mt-3 mb-3">Cost of subscription up to now&emsp;</p>
+								<p class="mb-2"><span id="serviceCost" class="text-primary fs-1 fw-bold mb-2"></span>&nbsp;<span class="fs-5">USD</span></p>
+								<p class="fs-3 mb-3"><span id="serviceChange"></span>&nbsp;<span id="selectedOption"></span></p>
 							</div>
 						</a>
 					</div>
 					<div class="col-sm-6 col-xl-3">
-						<a class="card card-link card-link-pop card-md d-flex flex-column h-100">
+						<a class="card card-link card-link-pop d-flex flex-column">
 			                <div class="ribbon ribbon-top bg-success">
 			                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-chart-histogram"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 3v18h18" /><path d="M20 18v3" /><path d="M16 16v5" /><path d="M12 13v8" /><path d="M8 16v5" /><path d="M3 11c6 0 5 -5 9 -5s3 5 9 5" /></svg>
 			                </div>
-							<div class="card-body text-center flex-grow-1">
-								<span id="">The cost up to today is :</span>
-								<br><br>
-								<span id="totalUsage" class="text-success fs-2"></span>
+							<div class="text-center">
+								<p class="text-black fs-4 fw-bold mt-3 mb-3">Cost of storage up to now</p>
+								<p class="mb-2"><span id="storageCost" class="text-success fs-1 fw-bold mb-2"></span>&nbsp;<span class="fs-5">USD</span></p>
+								<p id="storageUsage" class="fs-3 mb-3"></p>
 							</div>
 						</a>
 					</div>
 					<div class="col-sm-6 col-xl-3">
-						<a class="card card-link card-link-pop card-md d-flex flex-column h-100">
+						<a class="card card-link card-link-pop d-flex flex-column">
 			                <div class="ribbon ribbon-top bg-warning">
 			                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-brand-google-analytics"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M10 9m0 1.105a1.105 1.105 0 0 1 1.105 -1.105h1.79a1.105 1.105 0 0 1 1.105 1.105v9.79a1.105 1.105 0 0 1 -1.105 1.105h-1.79a1.105 1.105 0 0 1 -1.105 -1.105z" /><path d="M17 3m0 1.105a1.105 1.105 0 0 1 1.105 -1.105h1.79a1.105 1.105 0 0 1 1.105 1.105v15.79a1.105 1.105 0 0 1 -1.105 1.105h-1.79a1.105 1.105 0 0 1 -1.105 -1.105z" /><path d="M5 19m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" /></svg>
 							</div>
-							<div class="card-body text-center flex-grow-1">
-			                    <span id="">The estimated cost is :</span>
-								<br><br>
-								<span id="estimatedUsage" class="text-warning fs-2"></span>
+							<div class="text-center">
+								<p class="text-black fs-4 fw-bold mt-3 mb-3">Cost of job run up to now</p>
+								<p class="mb-2"><span id="jobrunCost" class="text-warning fs-1 fw-bold mb-2"></span>&nbsp;<span class="fs-5">USD</span></p>
+								<p id="jobrunUsage" class="fs-3 mb-3"></p>
 							</div>
 						</a>
 					</div>
 					<div class="col-sm-6 col-xl-3">
-						<a class="card card-link card-link-pop card-md d-flex flex-column h-100">
-               				<div class="ribbon ribbon-top bg-secondary">
+						<a class="card card-link card-link-pop d-flex flex-column">
+               				<div class="ribbon ribbon-top bg-azure">
                  				<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-list-details"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M13 5h8" /><path d="M13 9h5" /><path d="M13 15h8" /><path d="M13 19h5" /><path d="M3 4m0 1a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v4a1 1 0 0 1 -1 1h-4a1 1 0 0 1 -1 -1z" /><path d="M3 14m0 1a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v4a1 1 0 0 1 -1 1h-4a1 1 0 0 1 -1 -1z" /></svg>
 							</div>
-							<div class="card-body text-start flex-grow-1">
-								<span id="">File Upload  & Job Running: </span>
-							 	<br><br>
-								<div class="d-flex justify-content-between mb-2" > <!-- Added flex container -->
-									<span class="text-secondary fs-3" id="premiumSrvc">File Size:</span>
-									<span class="text-secondary fs-3" style="font-weight: bold; ;">+ 3,232 USD</span> <!-- Moved price here -->
-								</div>
-							 	<div class = "form-group"></div>
-								<div class="d-flex justify-content-between pt-0"> <!-- Added flex container -->
-									<span class="text-secondary fs-3" id="premiumSrvcUser">Job Running:</span>
-									<span class="text-secondary fs-3" style="font-weight: bold; ;">+ 5,887 USD</span> <!-- Moved price here -->
-								</div>
+							<div class="text-center">
+								<p class="text-black fs-4 fw-bold mt-3 mb-3">Total cost up to now</p>
+								<p class="mb-2"><span id="totalUsage" class="text-azure fs-1 fw-bold mb-2"></span>&nbsp;<span class="fs-5">USD</span></p>
+								<p class="mb-3"><span id="estimatedUsage" class="fs-3 mb-2"></span>&nbsp;<span class="fs-5">(estimate of this month)</span></p>
 							</div>
 						</a>
-					</div>
-					 <div class="mb-2">
-						<!-- <div class="card card-md">
-							<div class="container my-5">
-								<canvas id="mixedChart" width="300" height="100"></canvas>
-							</div>
-						</div> -->
 					</div>
 					<div class="col-12 mb-3">
 						<div class="card">
@@ -141,12 +124,12 @@
 								<div class="tab-content">
 									<div class="tab-pane active show" id="tabs-profile">
 										<div class="container my-5">
-											<canvas id="mixedChart" width="300" height="100"></canvas>
+											<canvas id="mixedChart" width="300" height="150"></canvas>
 										</div>
 									</div>
 									<div class="tab-pane" id="tabs-password">
 										<div class="container my-5">
-											<canvas id="serviceHist" width="300" height="100"></canvas>
+											<canvas id="serviceHist" width="300" height="150"></canvas>
 										</div>
 									</div>
 								</div>
@@ -181,7 +164,7 @@
 	          plugins: {
 	            title: {
 	              display: true,
-	              text: "Usage Information",
+	              text: "Usage Chart",
 	              font: {
 	                size: 18,
 	                textAlign: "flex-start",
@@ -204,7 +187,7 @@
 	              position: "left",
 	              title: {
 	                display: true,
-	                text: "Usage (%)",
+	                text: "Storage (KB)",
 	                font: {
 	                  size: 14,
 	                },
@@ -226,7 +209,7 @@
 	              },
 	              title: {
 	                display: true,
-	                text: "Cost ($)",
+	                text: "Cost (USD)",
 	                font: {
 	                  size: 14,
 	                },
@@ -337,45 +320,47 @@
 	        initlaizedChart.data.datasets = [
 	          {
 	            type: "bar",
-	            label: "Upload File Size",
+	            label: "Storage",
 	            data: randomData,
-	            backgroundColor: "rgba(254, 183, 255, 0.8)",
-	            borderColor: "rgba(255, 99, 132, 1)",
+	            backgroundColor: "rgba(47, 179, 68, 0.3)",
+	            borderColor: "rgba(47, 179, 68, 1)",
 	            yAxisID: "y",
-	            orderWidth: 1,
+	            borderWidth: 1,
 	            barThickness: "flex",
 	            maxBarThickness: 50,
 	          },
 	          {
 	            type: "bar",
-	            label: "Job Running Time",
+	            label: "Job Run",
 	            data: randomData,
-	            backgroundColor: "rgba(144, 247, 146, 0.8)",
-	            borderColor: "rgba(54, 162, 235, 1)",
+	            backgroundColor: "rgba(247, 103, 7, 0.3)",
+	            borderColor: "rgba(247, 103, 7, 1)",
 	            yAxisID: "y",
-	            orderWidth: 1,
+	            borderWidth: 1,
 	            barThickness: "flex",
 	            maxBarThickness: 50,
 	          },
 	          {
 	            type: "line",
-	            label: "Cost up to today",
+	            label: "Cost up to now",
 	            data: totalCost,
 	            fill: false,
-	            borderColor: "rgba(75, 192, 192, 1)",
+	            borderColor: "rgba(66, 153, 225, 1)",
 	            yAxisID: "y1",
-	            orderWidth: 2,
+	            borderWidth: 1,
 	            spanGaps: true,
+	            borderWidth: 4,
 	          },
 	          {
 	            type: "line",
-	            label: "Expected Cost",
+	            label: "Estimated Cost",
 	            data: expectedCost,
 	            fill: false,
-	            borderColor: "rgba(255, 206, 86, 1)",
+	            borderColor: "rgba(102, 115, 130, 1)",
 	            yAxisID: "y1",
-	            orderWidth: 2,
+	            borderWidth: 1,
 	            spanGaps: true,
+	            borderWidth: 4,
 	          },
 	        ];
 			serviceHistChart.data.datasets = [
@@ -386,7 +371,7 @@
 				backgroundColor: "rgba(255, 99, 132, 0.2)",
 				borderColor: "rgba(255, 99, 132, 1)",
 				yAxisID: "y",
-				orderWidth: 1,
+				borderWidth: 1,
 				barThickness: "flex",
 				maxBarThickness: 50,
 	          },
@@ -397,7 +382,7 @@
 				backgroundColor: "rgba(54, 162, 235, 0.2)",
 				borderColor: "rgba(54, 162, 235, 1)",
 				yAxisID: "y",
-				orderWidth: 1,
+				borderWidth: 1,
 				barThickness: "flex",
 				maxBarThickness: 50,
 	          }
@@ -444,41 +429,70 @@
 	            // update the chart wwth the data
 	            updateChart(data);
 	            if (data && data.length > 0) {
+
+		          let storageUsage = data[0].fileSize;
+	              let storageCostUsage = data[0].maxFileCostSum;
+
+	              let jobrunUsage = data[0].jobTime;
+	              let jobrunCostUsage = data[0].maxJobCostExpSum;	              
+	              
 	              let totalCostUsage = data[0].maxSrvcCostSum;
-	              // let totalCostUsage = data[0].reduce(
-	              //   (acc, item) => acc + item.srvcCostSum
-	              // );
-	              // map((item) => item.maxSrvcCostSum);
-	              let estimatedCostUsage = data[0].maxSrvcCostExpSum;
-	              // let estimatedUsage = data[0].reduce(
-	              //   (acc, item) => acc + item.maxSrvcCostExpSum
-	              // );
-	              // .map((item) => item.maxSrvcCostExpSum);
-	              console.log("totalCostUsage", totalCostUsage);
-	              console.log("estimatedUsage", estimatedUsage);
+	              let estimatedTotalCostUsage = data[0].maxSrvcCostExpSum;
+
+		          let serviceCost = parseFloat(totalCostUsage) - parseFloat(storageCostUsage) - parseFloat(jobrunCostUsage);
+	              
+//	              console.log("totalCostUsage", totalCostUsage);
+//	              console.log("estimatedUsage", estimatedUsage);
 	              // Display the currently selected option data
-	              if (estimatedUsage > 0 || totalCostUsage > 0) {
-	                $("#estimatedUsage")
-	                  .text(
-	                    "+ " + estimatedCostUsage.toLocaleString() + " USD"
-	                  )
-	                  .css("font-weight", "bold");
-	                $("#totalUsage")
-	                  .text("+ " + totalCostUsage.toLocaleString() + " USD")
-	                  .css("font-weight", "bold");
-	              } else {
-	                // No positive values found
-	                $("#estimatedUsage").text("0 USD");
-	                $("#estimatedUsage").css("font-weight", "bold");
-	                $("#totalUsage").text("0 USD");
-	                $("#totalUsage").css("font-weight", "bold");
-	              }
+	              
+	              if (serviceCost > 0) {
+		                $("#serviceCost").text(serviceCost.toLocaleString());
+		              } else {
+		                // No positive values found
+		                $("#serviceCost").text("0");
+		              }	              
+	            
+	              if (storageUsage > 0) {
+		                $("#storageCost").text(storageCostUsage.toLocaleString());
+		                $("#storageUsage").text(storageUsage.toLocaleString() + " kilobytes");
+		              } else {
+		                // No positive values found
+		                $("#storageCost").text("0");
+		                $("#storageUsage").text("0 kilobyte");
+		              }
+
+	              if (jobrunUsage > 0) {
+		                $("#jobrunCost").text(jobrunCostUsage.toLocaleString());
+		                $("#jobrunUsage").text(jobrunUsage.toLocaleString() + " seconds");
+		              } else {
+		                // No positive values found
+		                $("#jobrunCost").text("0");
+		                $("#jobrunUsage").text("0 second");
+		              }
+	            
+	              if (totalCostUsage > 0) {
+		                $("#totalUsage").text(totalCostUsage.toLocaleString());
+		              } else {
+		                // No positive values found
+		                $("#totalUsage").text("0");
+		              }
+	            
+	              if (estimatedTotalCostUsage > 0) {
+		                $("#estimatedUsage").text(estimatedTotalCostUsage.toLocaleString());
+		              } else {
+		                // No positive values found
+		                $("#estimatedUsage").text("0");
+		              }
+	            
 	            } else if (data && data.length === 0) {
 	              // No subscription info found
-	              $("#estimatedUsage").text("0 USD");
-	              $("#estimatedUsage").css("font-weight", "bold");
-	              $("#totalUsage").text("0 USD");
-	              $("#totalUsage").css("font-weight", "bold");
+	              $("#serviceCost").text("0");
+	              $("#storageUsage").text("0 kilobyte");
+	              $("#storageCost").text("0");
+	              $("#jobrunCost").text("0");
+	              $("#jobrunUsage").text("0 second");
+	              $("#totalUsage").text("0");
+	              $("#estimatedUsage").text("0");
 	            }
 	          },
 	          error: function (xhr, status, error) {
@@ -505,10 +519,10 @@
 	            // update the ui based on the user subscription
 	            if (data[0].srvcCd === "01") {
 	              $("#serviceChange").text("Basic Service");
-	              serviceChange.style.fontWeight = "bold";
+//	              serviceChange.style.fontWeight = "bold";
 	            } else {
 	              $("#serviceChange").text("Premium Service");
-	              serviceChange.style.fontWeight = "bold";
+//	              serviceChange.style.fontWeight = "bold";
 	            }
 	          },
 	          error: function (xhr, status, error) {
@@ -535,23 +549,13 @@
 	              var subscription = data[0]; // Assuming we hvae only one subscrition
 	              // Display the currently selected option data
 	              if (subscription.optDtlsCd > 0) {
-	                $("#selectedOption").text(
-	                  "+ " + subscription.optDtlsNm + " Users"
-	                );
-	                // we make the text bold
-	                $("#selectedOption").css("font-weight", "bold");
+	                $("#selectedOption").text("+ " + subscription.optDtlsNm + " Users");
 	              } else if (subscription.optDtlsCd === 0 || subscription.optDtlsCd === null) {
-	                $("#selectedOption").text("No additional option.");
-	                $("#selectedOption").css("font-weight", "bold");
+	                $("#selectedOption").text("");
 	              }
 	            } else {
 	              // No subscription info found
-	              $("#basicSubscriptionButton")
-	                .text("Use")
-	                .prop("disabled", false);
-	              $("#premiumSubscriptionButton")
-	                .text("Use")
-	                .prop("disabled", false);
+	            	$("#selectedOption").text("");
 	            }
 	          },
 	          error: function (xhr, status, error) {
