버튼 컬러 변경

--- a/src/main/resources/templates/views/adm/srv/ADMSRV001M0.html
+++ b/src/main/resources/templates/views/adm/srv/ADMSRV001M0.html
@@ -172,7 +172,7 @@
 									<span id="selectedOption" class="fw-bold"></span>
 								</div>
 								<div class="card-footer card-footer-transparent">
-									<button type="button" class="btn btn-outline-secondary w-100" onclick="addOption()">Add</button>
+									<button type="button" class="btn btn-secondary w-100" onclick="addOption()">Add</button>
 								</div>
 							</a>
 						</div>
